Arreglo Warnings ProductServiceTest